--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
 	"name": "dotnet-project-references",
 	"displayName": "DotNet Project References",
 	"description": "Manage project references on dotnet core projects and solutions.",
+	"publisher": "teonivalois",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/teonivalois/vscode-dotnet-project-references.git"
+	},
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.45.0"
